Bug 503934 - Hotspot icon shows active when wifi antenna is disabled, whether there's an active network or not
Summary: Hotspot icon shows active when wifi antenna is disabled, whether there's an a...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.3.90
Platform: Solus Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-08 16:51 UTC by TraceyC
Modified: 2025-06-05 13:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TraceyC 2025-05-08 16:51:15 UTC
SUMMARY
If a wired network connection is active and WiFi is disabled, the hotspot icon still shows as active. Attempting to create a hotspot fails with an error.

STEPS TO REPRODUCE
1. On a device with both a wired and wifi network connection available, connect to the wired one
2. Toggle the WiFi switch to off
3. Click on the network applet and click Hotspot

ALSO
1. On a device with only a wifi connection available, toggle the WiFi switch to off 
2. Click on the network applet and click Hotspot

OBSERVED RESULT
Clicking on the hotspot icon produces a popup error in both cases
"Failed to create hotspot tracey-hotspot
Error - Connection 'tracey-hotspot' is not available on device wlp0s20f3 because device is not available"

EXPECTED RESULT
If it's not possible to create a hotspot due to not having any network connectivity or no free wireless adapter, the icon is inactive

SOFTWARE/OS VERSIONS
Operating System: Solus 4.7
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.14.0
Qt Version: 6.8.3
Kernel Version: 6.14.4-318.current (64-bit)
Graphics Platform: Wayland
Processors: 16 × 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Memory: 64 GiB of RAM (62.5 GiB usable)
Graphics Processor 1: Intel® UHD Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3060 Laptop GPU
Comment 1 Bug Janitor Service 2025-05-28 12:44:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/431
Comment 2 Niccolò Venerandi 2025-06-05 08:12:39 UTC
Git commit 032b7dc86092ebbc9b17e8e3a563437cf76376e9 by Niccolò Venerandi.
Committed on 05/06/2025 at 08:12.
Pushed by niccolove into branch 'master'.

Show hotspot as unsupported when wifi is disabled

Trying to activate hotspot after disabling wifi will generate
an error; we then show it as unsupported when the toggle
is disabled.

This also disables hotspot on boot when there was no previous
hotspot configured, and when wi-fi is disabled.

M  +3    -1    applet/contents/ui/Toolbar.qml
M  +18   -3    libs/handler.cpp
M  +1    -0    libs/handler.h

https://invent.kde.org/plasma/plasma-nm/-/commit/032b7dc86092ebbc9b17e8e3a563437cf76376e9