Show hotspot as unsupported when wifi is disabled

Trying to activate hotspot after disabling wifi will generate
an error; we then show it as unsupported when the toggle
is disabled.

This also disables hotspot on boot when there was no previous
hotspot configured, and when wi-fi is disabled.

BUG:503934